<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Adventure Pals</string>
    <string name="action_settings">Settings</string>
    <string name="connectTitle">Click on connect for a list of nearby devices.</string>
    <string name="connectTitle1">Once both players have selected each other the game will begin.</string>
    <string name="discoverTitle">If the device is not on the list select find devices.</string>
    <string name="discoverTitle1">Your device should appear on the other players join screen.</string>
    <string name="host">Find Devices</string>
    <string name="join">Join</string>
    <string name="title_activity_event_ui">EventUI</string>
    <string name="relay_text">Relay Text</string>

    <!--  DeviceListActivity -->
    <string name="scanning">scanning for devices...</string>
    <string name="select_device">select a device to connect</string>
    <string name="none_paired">No devices have been paired</string>
    <string name="none_found">No devices found</string>
    <string name="title_paired_devices">Paired Devices</string>
    <string name="title_other_devices">Other Available Devices</string>
    <string name="button_scan">Scan for devices</string>
    <string name="multiplayer">Multiplayer coming soon!</string>

    <string name="button1">Attack</string>
    <string name="button2">Ability</string>
    <string name="button3">End Turn</string>
    <string name="button4">Defend</string>

</resources>
